# FABM

include/: standard_variable_assignments.h  standard_variables.h
src/: CMakeLists.txt  fabm_types.F90
src/models/uvic/: CMakeLists.txt  dic.F90  dms.F90  dmsp_papa.F90  eco.F90  icealgae.F90  icedms.F90  npzd_resolute.F90  original_dic.F90  uvic_model_library.F90
util/standard_variables/: standard_variables.wiki  variables.yaml
